k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gts-system
  name: demo-nginx
  labels:
    app: demo-nginx
spec:
  selector:
    matchLabels:
      app: demo-nginx
  template:
    metadata:
      labels:
        app: demo-nginx
    spec:
      imagePullSecrets:
      - name: jfrog
      containers:
      - name: demo-nginx
        image: $(CONTAINERREGISTRY)/$(IMAGE-NAME):$(image-tag)
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "10Mi"
            cpu: "20m"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: demo-nginx
#   namespace: gts-system
# spec:
#   selector:
#     app: demo-nginx
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80   
# ---
# # networking.k8s.io/v1beta1 == 1.14 to 1.18
# # networking.k8s.io/v1 = 1.19+
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: demo-nginx
#   namespace: gts-system
# spec:
#   rules:
#   - host: sbccc.asia.pwcinternal.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: demo-nginx
#             port:
#               number: 80
