k8s/ingress.yaml
#apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-nginx
  namespace: gts-system
spec:
  rules:
  - host: sbccc.asia.pwcinternal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-nginx
            port:
              number: 80
